--- a/src/css/variables/behaviors.css
+++ b/src/css/variables/behaviors.css
@@ -2,5 +2,4 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  min-width: 0;
 }
